--- a/MovieStore/Views/Book/UpdateBook.cshtml
+++ b/MovieStore/Views/Book/UpdateBook.cshtml
@@ -3,7 +3,7 @@
     Layout = "_AdminLayout";
 }
 <div style="width:100%">
-    <h2> Update Book </h2>
+    <h2> Update Movie </h2>
     <a asp-action="Index" asp-controller="Book" class="btn btn-primary">Back</a>
     <form asp-action="UpdateBook" enctype="multipart/form-data">
         <input type="hidden" asp-for="Id" />
