--- a/MovieStore/Views/Shared/_Layout.cshtml
+++ b/MovieStore/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="/Home/Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/Home/Contact">Contact Us</a>
+                        </li>
                         @if (User.IsInRole(Roles.Admin.ToString()))
                         {
                             <li class="nav-item">
